feat: add verified PGP keys to public profiles
